# django_projects

./: db.sqlite3  requirements.txt
galeria/: admin.py  models.py  urls.py  views.py
galeria/migrations/: 0002_fotografia_categoria.py  0004_fotografia_data_imagem.py
school-client/: .env.example  db.sqlite3
school-client/frontend/: urls.py  views.py
school-client/school_client/: settings.py
school-client/templates/frontend/: base.html  course_form.html  courses_list.html  student_enroll_form.html  student_enrollments.html  student_form.html  student_grade_form.html  student_grades.html  students_list.html
school-fullstack/: README.en.md  README.md
school-fullstack/school-client/: db.sqlite3  manage.py
school-fullstack/school-rest/: .env  .env.example  README_PACKAGING.md  db.sqlite3  mkdocs.yml  pyproject.toml  requirements-docs.txt
school-fullstack/school-rest/docs/: index.md
school-fullstack/school-rest/docs/reference/: models.md  serializers.md  views.md
school-fullstack/school-rest/escola/: admin.py  apps.py  models.py  serializers.py  views.py
school-fullstack/school-rest/escola/management/commands/: bootstrap_roles.py  seed_escola.py
school-fullstack/school-rest/escola/migrations/: 0001_initial.py  0002_matricula.py  0003_professor_nota.py
school-fullstack/school-rest/setup/: settings.py  urls.py
setup/: settings.py  urls.py
space-django/: .env.example
space-django/galeria/: models.py  tests.py  views.py
space-django/setup/: settings.py  urls.py
templates/galeria/: atualizar.html  base.html  buscar.html  imagem.html  index.html
(+29 files in other folders)
